DSND-2871: Fix simple Sonarlint issues